tests/int02_err.json.err
Parse error at line 1

001: [-]
       ^
Expected digit(s)
